# mission-control

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  DESIGN.md  Makefile  PRODUCT.md  README.md  SECURITY.md  backup.sh  docker-compose.override.example.yml  docker-compose.yml  install.sh  pg_hba.conf  setup.ps1  setup.sh
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: agent_doc_constants.py  auth.py  comm_constants.py  comment_types.py  config.py  constants.py  database.py  main.py  redis_client.py  scopes.py  task_status.py  utils.py
backend/config/: runtimes.json
backend/scripts/: backfill_deliverable_wrappers.py  backfill_memory_embeddings.py  create_acp_agent.py  create_free_code_agent.py  mc_henry_sunset.py  seed_cli_plugins.py  setup_discord_channels.py
backend/templates/: CARD.md.j2  MEMORY.md.j2  SOUL.md.j2  USER.md.j2  agent.plist.j2  cli_agent.env.j2  cli_agent_settings.json.j2  cli_agent_worker.sh.j2  host_agent_poll.sh.j2  host_agent_run.sh.j2
backend/tests/: conftest.py  test_ack_timeout_per_runtime.py  test_adapter_tck.py  test_agent_archive_endpoints.py  test_agent_archived_field.py  test_agent_create_flow.py  test_agent_create_scopes_harness.py  test_agent_credentials.py  test_agent_delete_gate.py  test_agent_docs_contract.py  test_agent_docs_protocol_coherence.py  test_agent_harness_field.py  test_agent_harness_switch.py  test_agent_lifecycle_primitives.py  test_agent_lifecycle_service.py  test_agent_me_endpoint.py  test_agent_me_endpoints.py  test_agent_poll_direct_dispatch.py  test_agent_readiness.py  test_agent_recover_task.py  test_agent_roles.py  (+432 more)
(+1018 files in other folders)
